WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273907
Resolve WebCore::findWordBoundary crash
https://bugs.webkit.org/show_bug.cgi?id=273907
Summary
Resolve WebCore::findWordBoundary crash
Abigail F
Reported
2024-05-08 15:36:56 PDT
Fix crash at WebCore::findWordBoundary
Attachments
Add attachment
proposed patch, testcase, etc.
Abigail F
Comment 1
2024-05-08 15:37:09 PDT
<
rdar://122491165
>
EWS
Comment 2
2024-05-16 11:49:49 PDT
Committed
272448.1026@safari-7618-branch
(99b865d3d529): <
https://commits.webkit.org/272448.1026@safari-7618-branch
> Reviewed commits have been landed. Closing PR #1267 and removing active labels.
EWS
Comment 3
2024-05-21 14:49:39 PDT
Committed
279076@main
(d8b017db8ea6): <
https://commits.webkit.org/279076@main
> Reviewed commits have been landed. Closing PR #28867 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug