Resolve WebCore::findWordBoundary crash rdar://122491165 https://bugs.webkit.org/show_bug.cgi?id=273907

Reviewed by David Kilzer and Wenson Hsieh.

Fix empty string case to resolve findWordBoundary crash

Combined changes:
* Source/WebCore/platform/text/mac/TextBoundaries.mm:
(WebCore::findWordBoundary):

Canonical link: https://commits.webkit.org/272448.1026@safari-7618-branch